--- a/mosque.html
+++ b/mosque.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico?">
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Home</title>
+    <title>Mosque</title>
 
 <style>
 
@@ -24,30 +24,30 @@
         <a class = "skip" href="#skip">Skip to Main Content</a>
         <nav>
             <div class="topnav">
-                <a href="index.html" class="active">Home</a>
-                <a href="mosque.html">Mosques</a>
+                <a href="index.html">Home</a>
+                <a href="mosque.html" class="active">Mosques</a>
                 <a href="coffee.html">Coffee shops</a>
                 <a href="bts.html">BTS</a>
             </div>
         </nav>
         <h1>Nuzhat's Adventure</h1>
-    <a id="button"></a>
+
     </header>
     <main id="skip">
     <div class="container-fluid">
-        <h2>About me</h2>
-        <h3>Welcome! My name is Nuz and here I'm showcasing my cafe hopping activities that uplifts my mood and my obsession with BTS! I also shared Mosques around the world that I plan on visiting in the next year!</h3>
+        <h2>Mosques I want to visit</h2>
+        <h3>I am a muslim and recently I have been fascinated by Mosque Architecture. Observant Muslims pray five times a day and join in community worship on Fridays at a mosque, where worship is led by an imam. In the coming year I want to visit these mosques in the Middle-East.</h3>
         <div class="container">
                     <div class="gallery-wrap">
-                        <div class="item item-6">
+                        <div class="item item-1">
                             <article>
-                                <h3>Coffee shop</h3>
+                                <h3>Blah</h3>
                             </article>
                         </div>
-                        <div class="item item-7"></div>
-                        <div class="item item-8"></div>
-                        <div class="item item-9"></div>
-                        <div class="item item-10"></div>
+                        <div class="item item-2"></div>
+                        <div class="item item-3"></div>
+                        <div class="item item-4"></div>
+                        <div class="item item-5"></div>
                     </div>
         </div>
     </div>
@@ -59,5 +59,5 @@
     </footer>
 
 
+
 </body>
-</html>
