--- a/index.html
+++ b/index.html
@@ -44,10 +44,26 @@
                                 <h3>Coffee shop</h3>
                             </article>
                         </div>
-                        <div class="item item-7"></div>
-                        <div class="item item-8"></div>
-                        <div class="item item-9"></div>
-                        <div class="item item-10"></div>
+                        <div class="item item-7">
+                            <article>
+                                <h3>BTS members</h3>
+                            </article>
+                        </div>
+                        <div class="item item-8">
+                            <article>
+                                <h3>A grandmother who lives next to Masjid Al-Aqsa</h3>
+                            </article>
+                        </div>
+                        <div class="item item-9">
+                            <article>
+                                <h3>BTS member Jimin being funny</h3>
+                            </article>
+                        </div>
+                        <div class="item item-10">
+                            <article>
+                                <h3>Coffee from a flower shop</h3>
+                            </article>
+                        </div>
                     </div>
         </div>
     </div>
