--- a/mosque.html
+++ b/mosque.html
@@ -36,18 +36,34 @@
     <main id="skip">
     <div class="container-fluid">
         <h2>Mosques I want to visit</h2>
-        <h3>I am a muslim and recently I have been fascinated by Mosque Architecture. Observant Muslims pray five times a day and join in community worship on Fridays at a mosque, where worship is led by an imam. In the coming year I want to visit these mosques in the Middle-East.</h3>
+        <h3>Being raised Muslim, I have always been fascinated by Mosque Architecture. Observant Muslims pray five times a day and join in community worship on Fridays at a mosque, where worship is led by an imam. While keeping up with my faith, in the coming year I have been planning to visit these mosques in the Middle-East. May Allah accept our prayers!</h3>
         <div class="container">
                     <div class="gallery-wrap">
                         <div class="item item-1">
                             <article>
-                                <h3>Blah</h3>
+                                <h3>Al-Aqsa Mosque, Palestine</h3>
                             </article>
                         </div>
-                        <div class="item item-2"></div>
-                        <div class="item item-3"></div>
-                        <div class="item item-4"></div>
-                        <div class="item item-5"></div>
+                        <div class="item item-2">
+                            <article>
+                                <h3>Masjid al-Haram, Makkah</h3>
+                            </article>
+                        </div>
+                        <div class="item item-3">
+                            <article>
+                                <h3>Masjid al-Nabawi, Medina</h3>
+                            </article>
+                        </div>
+                        <div class="item item-4">
+                            <article>
+                                <h3>Imam Ali Holy Shrine, Najaf, Iraq</h3>
+                            </article>
+                        </div>
+                        <div class="item item-5">
+                            <article>
+                                <h3>Imam Reza Shrine, Mashhad, Iran</h3>
+                            </article>
+                        </div>
                     </div>
         </div>
     </div>
